--- a/index.html
+++ b/index.html
@@ -72,25 +72,6 @@ h1, h2, h3, h4, h5, h6 {
 font-family: 'Press Start 2P', monospace !important;
 letter-spacing: 0.04em;
 }
-/* MAIN TITLE FONT & OUTLINE */
-.hero-nav-title {
-color: #fff; /* White text */
-text-shadow:
--2px -2px 0 #000,
-2px -2px 0 #000,
--2px 2px 0 #000,
-2px 2px 0 #000,
-0px -2px 0 #000,
-0px 2px 0 #000,
--2px 0px 0 #000,
-2px 0px 0 #000; /* Black outline */
--webkit-text-stroke: 0; /* Ensure no unintended browser-specific strokes interfere */
-text-stroke: 0;
-font-weight: normal;
-word-break: break-word;
-text-align: right; /* Keep original alignment */
-margin-bottom: 4px; /* Adjust spacing if needed after adding shadow */
-}
 /* Subtitle uses DotGothic16 by default (desktop) */
 .hero-nav-subtitle {
 font-family: 'DotGothic16', monospace !important;
@@ -251,21 +232,22 @@ margin-top: 10px;
 .banner-hero-separator {
 margin-top: 0;
 }
-
-/* New containers for desktop/mobile banner content */
-.desktop-banner-container {
-display: block; /* Default for desktop */
-}
-.mobile-banner-container {
-display: none; /* Hidden by default for desktop */
-}
+        
+        /* New containers for desktop/mobile banner content */
+        .desktop-banner-container {
+            display: block; /* Default for desktop */
+        }
+        .mobile-banner-container {
+            display: none; /* Hidden by default for desktop */
+        }
 
 .banner-image-mobile {
-display: block; /* Displayed by default within mobile-banner-container */
-width: 98vw;
-max-width: 100vw;
-margin: 0 auto 10px auto;
-border-radius: 10px;
+            display: none; /* Hidden on desktop */
+            display: block; /* Displayed by default within mobile-banner-container */
+            width: 98vw;
+            max-width: 100vw;
+            margin: 0 auto 10px auto;
+            border-radius: 10px;
 }
 
 .hero-images-spacing, .banner-images-spacing {
@@ -276,7 +258,8 @@ border-right: none !important;
 }
 .hero-image-row {
 width: 100vw;
-display: flex; /* Displayed by default within desktop-banner-container */
+            display: flex;
+            display: flex; /* Displayed by default within desktop-banner-container */
 flex-direction: row;
 justify-content: center;
 align-items: stretch;
@@ -528,8 +511,7 @@ padding: 0;
 .hero-nav-title {
 text-align: center;
 width: 100%;
-                font-size: 1.05rem; /* Adjusted for mobile */
-                font-size: 1.1rem; /* Increased slightly for matching */
+font-size: 1.05rem;
 margin-bottom: 4px;
 margin-top: 0;
 word-break: break-word;
@@ -559,21 +541,29 @@ height: 36px;
 height: 36px;
 min-height: 36px;
 }
+            .banner-image-mobile {
+                display: block; /* Visible on mobile */
+                width: 98vw;
+                max-width: 100vw;
+                margin: 0 auto 10px auto;
+                border-radius: 10px;
 
-/* Show mobile banner container and hide desktop banner container on mobile */
-.desktop-banner-container {
-display: none;
+            /* Show mobile banner container and hide desktop banner container on mobile */
+            .desktop-banner-container {
+                display: none;
 }
-.mobile-banner-container {
-display: block;
-width: 100%; /* Ensure it takes full width */
-}
+            .hero-images-spacing, .banner-images-spacing {
+            .mobile-banner-container {
+                display: block;
+                width: 100%; /* Ensure it takes full width */
+            }
 
-.banner-images-spacing {
+            .banner-images-spacing {
 height: 18px;
 }
 .hero-image-row {
-flex-direction: column !important; /* This rule will now only apply if desktop-banner-container is somehow visible on mobile */
+                flex-direction: column !important;
+                flex-direction: column !important; /* This rule will now only apply if desktop-banner-container is somehow visible on mobile */
 width: 100vw;
 align-items: center;
 }
@@ -623,8 +613,6 @@ height: 1em;
 @media (max-width: 700px) {
 body .hero-nav-subtitle {
 font-family: 'DotGothic16', monospace !important;
-                text-align: center; /* Centered on mobile */
-                font-size: 1.1rem; /* Adjusted size to match main title */
 }
 }
 </style>
@@ -673,31 +661,46 @@ opacity="0.97"
 />
 </svg>
 </div>
+      
+      <div class="hero-images-spacing"></div> <div class="hero-image-row">
+        <div class="hero-image-box" tabindex="0">
+          <img src="images/walking temple website.jpg" alt="After the War" class="hero-image">
+        </div>
+        <div class="hero-image-box" tabindex="0">
+          <img src="images/the botanist a4 website.jpg" alt="Ramen Battleship" class="hero-image">
+        </div>
+        <div class="hero-image-box" tabindex="0">
+          <img src="images/3 Joe Shenton - Reunion.jpg" alt="PTSD Machine" class="hero-image">
+        </div>
+        <div class="hero-image-box" tabindex="0">
+          <img src="images/5 Joe Shenton - Remnants.jpg" alt="Transporter" class="hero-image">
+        </div>
 
-<div class="desktop-banner-container">
-<div class="hero-images-spacing"></div>
-<div class="hero-image-row">
-<div class="hero-image-box" tabindex="0">
-<img src="images/walking temple website.jpg" alt="After the War" class="hero-image">
-</div>
-<div class="hero-image-box" tabindex="0">
-<img src="images/the botanist a4 website.jpg" alt="Ramen Battleship" class="hero-image">
-</div>
-<div class="hero-image-box" tabindex="0">
-<img src="images/3 Joe Shenton - Reunion.jpg" alt="PTSD Machine" class="hero-image">
-</div>
-<div class="hero-image-box" tabindex="0">
-<img src="images/5 Joe Shenton - Remnants.jpg" alt="Transporter" class="hero-image">
-</div>
-</div>
-<div class="banner-images-spacing"></div>
+      <div class="desktop-banner-container">
+          <div class="hero-images-spacing"></div>
+          <div class="hero-image-row">
+            <div class="hero-image-box" tabindex="0">
+              <img src="images/walking temple website.jpg" alt="After the War" class="hero-image">
+            </div>
+            <div class="hero-image-box" tabindex="0">
+              <img src="images/the botanist a4 website.jpg" alt="Ramen Battleship" class="hero-image">
+            </div>
+            <div class="hero-image-box" tabindex="0">
+              <img src="images/3 Joe Shenton - Reunion.jpg" alt="PTSD Machine" class="hero-image">
+            </div>
+            <div class="hero-image-box" tabindex="0">
+              <img src="images/5 Joe Shenton - Remnants.jpg" alt="Transporter" class="hero-image">
+            </div>
+          </div>
+          <div class="banner-images-spacing"></div>
+      </div>
+
+      <div class="mobile-banner-container">
+          <img src="images/the botanist a4 website.jpg" alt="Featured Banner" class="banner-image-mobile" />
 </div>
 
-<div class="mobile-banner-container">
-<img src="images/the botanist a4 website.jpg" alt="Featured Banner" class="banner-image-mobile" />
-</div>
-
-<div class="banner-hero-separator">
+      <div class="banner-images-spacing"></div> <div class="banner-hero-separator">
+      <div class="banner-hero-separator">
 <svg viewBox="0 0 100 56" preserveAspectRatio="none">
 <path
 d="M2,28 Q25,39 50,28 Q75,16 98,28"
@@ -710,6 +713,7 @@ opacity="0.97"
 />
 </svg>
 </div>
+      <img src="images/the botanist a4 website.jpg" alt="Featured Banner" class="banner-image-mobile" />
 </section>
 <section class="main-content hidden" id="mainContent">
 <div style="max-width: 700px; margin: 0px auto 0 auto; padding: 20px;">
