--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
         /* MAIN TITLE FONT & OUTLINE */
         .hero-nav-title {
             color: #fff; /* White text */
-            /* Removed text-shadow to rely only on text-stroke for outline */
-            -webkit-text-stroke: 1px #000; /* Crisp 1px black outline for Webkit browsers */
-            text-stroke: 1px #000;         /* Crisp 1px black outline for standard browsers */
+            font-size: 3.5rem; /* Made larger */
+            -webkit-text-stroke: 2px #000; /* Bolder 2px black outline for Webkit browsers */
+            text-stroke: 2px #000;         /* Bolder 2px black outline for standard browsers */
             font-weight: normal;
             word-break: break-word;
             text-align: right;
@@ -520,7 +520,7 @@
             .hero-nav-title {
                 text-align: center;
                 width: 100%;
-                font-size: 1.05rem;
+                font-size: 1.25rem; /* Larger font size for mobile */
                 margin-bottom: 4px;
                 margin-top: 0;
                 word-break: break-word;
