--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
         /* MAIN TITLE FONT & OUTLINE */
         .hero-nav-title {
             color: #fff; /* White text */
-            font-size: 2.5rem; /* Made larger */
-            -webkit-text-stroke: 1.5px #000; /* Bolder 2px black outline for Webkit browsers */
-            text-stroke: 1.5px #000;         /* Bolder 2px black outline for standard browsers */
+            font-size: 3.5rem; /* Made larger */
+            -webkit-text-stroke: 2px #000; /* Bolder 2px black outline for Webkit browsers */
+            text-stroke: 2px #000;         /* Bolder 2px black outline for standard browsers */
             font-weight: normal;
             word-break: break-word;
             text-align: right;
@@ -88,7 +88,7 @@
             font-family: 'DotGothic16', monospace !important;
             font-size: 2.2rem;
             color: #fff;
-            text-align: right;
+            text-align: right; /* Current desktop alignment */
             margin-bottom: 18px;
             margin-top: -6px;
             letter-spacing: 0.04em;
@@ -520,10 +520,16 @@
             .hero-nav-title {
                 text-align: center;
                 width: 100%;
-                font-size: 1.25rem; /* Larger font size for mobile */
+                font-size: 1.15rem; /* Slightly reduced font size for mobile */
+                -webkit-text-stroke: 1px #000; /* Adjusted outline for mobile */
+                text-stroke: 1px #000;         /* Adjusted outline for mobile */
                 margin-bottom: 4px;
                 margin-top: 0;
                 word-break: break-word;
+            }
+            /* Subtitle text aligned to center on mobile */
+            .hero-nav-subtitle {
+                text-align: center;
             }
             .main-links {
                 flex-direction: column;
