--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         /* MAIN TITLE FONT & OUTLINE */
         .hero-nav-title {
             color: #fff; /* White text */
-            font-size: 3.5rem; /* Made larger */
+            font-size: 2.5rem; /* Made larger */
             -webkit-text-stroke: 2px #000; /* Bolder 2px black outline for Webkit browsers */
             text-stroke: 2px #000;         /* Bolder 2px black outline for standard browsers */
             font-weight: normal;
@@ -86,7 +86,7 @@
         /* Subtitle uses DotGothic16 by default (desktop) - unchanged */
         .hero-nav-subtitle {
             font-family: 'DotGothic16', monospace !important;
-            font-size: 2.2rem;
+            font-size: 2.5rem;
             color: #fff;
             text-align: right; /* Current desktop alignment */
             margin-bottom: 18px;
@@ -528,9 +528,13 @@
                 word-break: break-word;
             }
             /* Subtitle text aligned to center on mobile */
-            .hero-nav-subtitle {
+           .hero-nav-subtitle {
                 text-align: center;
+                font-size: 1.15rem; /* Add or change this line */
             }
+            /* ... rest of mobile styles ... */
+        }
+            
             .main-links {
                 flex-direction: column;
                 align-items: center;
