--- a/index.html
+++ b/index.html
@@ -172,29 +172,23 @@
             margin-bottom: 0;
             padding: 0;
         }
-      .main-links a {
+        .main-links a {
             font-size: 1rem;
             color: #444;
             text-decoration: none;
             opacity: 0.90;
-            transition: color 0.18s, opacity 0.18s, background 0.18s, border-color 0.18s, text-shadow 0.18s, box-shadow 0.18s; /* Added box-shadow to transition */
+            transition: color 0.18s, opacity 0.18s, background 0.18s, border-color 0.18s, text-shadow 0.18s;
             font-weight: normal;
             display: flex;
             align-items: center;
             gap: 0.5em;
             padding: 0.4em 1.6em;
-            border-radius: 0; /* Removed rounded corners for a sharp, pixelated look */
-            border: 4px solid #fff; /* Made the primary border thicker */
+            border-radius: 20px;
+            border: 2.2px solid #fff;
             background: none;
-            box-shadow:
-                4px 4px 0 #000,   /* Bottom-right black shadow to create a pixel-like outline */
-                -4px -4px 0 #000, /* Top-left black shadow */
-                4px -4px 0 #000,  /* Top-right black shadow */
-                -4px 4px 0 #000;  /* Bottom-left black shadow */
+            box-shadow: none;
             margin: 0 0.1em;
         }
-
-        /* Update the hover state to manage the new box-shadow */
         .main-links a:hover,
         .main-links a:focus {
             background: #fff;
@@ -204,8 +198,6 @@
             text-decoration: none;
             filter: none;
             text-shadow: none;
-            box-shadow: none; /* Remove the pixel shadow on hover for a cleaner look */
-        }
         }
         .main-links .icon {
             display: inline-block;
