--- a/index.html
+++ b/index.html
@@ -172,23 +172,36 @@
             margin-bottom: 0;
             padding: 0;
         }
-        .main-links a {
+      .main-links a {
             font-size: 1rem;
             color: #444;
             text-decoration: none;
             opacity: 0.90;
-            transition: color 0.18s, opacity 0.18s, background 0.18s, border-color 0.18s, text-shadow 0.18s;
+            /* Added box-shadow to the transition for smooth hover effects */
+            transition: color 0.18s, opacity 0.18s, background 0.18s, border-color 0.18s, text-shadow 0.18s, box-shadow 0.18s;
             font-weight: normal;
             display: flex;
             align-items: center;
             gap: 0.5em;
             padding: 0.4em 1.6em;
-            border-radius: 20px;
-            border: 2.2px solid #fff;
+            border-radius: 20px; /* Maintained curved style */
+            border: 3px solid #fff; /* Slightly thicker white border as the base */
             background: none;
-            box-shadow: none;
+            box-shadow:
+                /* Outer black "pixel" outline using multiple shadows */
+                -3px -3px 0 #000, /* Top-left corner pixel */
+                3px -3px 0 #000,  /* Top-right corner pixel */
+                -3px 3px 0 #000,  /* Bottom-left corner pixel */
+                3px 3px 0 #000,   /* Bottom-right corner pixel */
+
+                -4px 0 0 #000,    /* Left edge pixel */
+                4px 0 0 #000,     /* Right edge pixel */
+                0 -4px 0 #000,    /* Top edge pixel */
+                0 4px 0 #000;     /* Bottom edge pixel */
             margin: 0 0.1em;
         }
+
+        /* Update the hover state to manage the new box-shadow */
         .main-links a:hover,
         .main-links a:focus {
             background: #fff;
@@ -198,6 +211,7 @@
             text-decoration: none;
             filter: none;
             text-shadow: none;
+            box-shadow: none; /* Remove the pixelated shadow on hover */
         }
         .main-links .icon {
             display: inline-block;
