--- a/index.html
+++ b/index.html
@@ -172,43 +172,39 @@
             margin-bottom: 0;
             padding: 0;
         }
-      .main-links a {
+    .main-links a {
             font-size: 1rem;
             color: #181818; /* Set text color to dark for the white button */
             text-decoration: none;
             opacity: 0.90;
-            transition: color 0.18s, opacity 0.18s, background 0.18s, box-shadow 0.18s; /* Updated transition */
+            transition: color 0.18s, opacity 0.18s, background 0.18s, box-shadow 0.18s;
             font-weight: normal;
             display: flex;
             align-items: center;
             gap: 0.5em;
             padding: 0.4em 1.6em; /* Adjust padding if button size changes too much with border removed */
-            border-radius: 5px; /* A small radius for a subtly rounded base for the pixel effect */
-            border: none; /* Remove the smooth border; pixel outline will be box-shadow */
+            border-radius: 2px; /* A very small border-radius to enable precise pixel steps */
+            border: none; /* Remove any smooth border; pixel outline will be box-shadow */
             background: #fff; /* Set background to white for the button body */
             margin: 0 0.1em;
 
             /* Pixelated Outline using multiple box-shadow layers */
             box-shadow:
-                /* Inner 1px pixel outline */
-                1px 1px 0 #000,    /* Top-left diagonal */
-                -1px 1px 0 #000,   /* Top-right diagonal */
-                1px -1px 0 #000,   /* Bottom-left diagonal */
-                -1px -1px 0 #000,  /* Bottom-right diagonal */
-                0 1px 0 #000,      /* Top edge */
-                0 -1px 0 #000,     /* Bottom edge */
-                1px 0 0 #000,      /* Right edge */
-                -1px 0 0 #000,     /* Left edge */
+                /* Main 2px outline (straight segments) */
+                2px 0 0 #000,
+                -2px 0 0 #000,
+                0 2px 0 #000,
+                0 -2px 0 #000,
 
-                /* Outer 2px pixel outline (creating the "steps" and thickness) */
-                2px 2px 0 #000,    /* Top-left diagonal step */
-                -2px 2px 0 #000,   /* Top-right diagonal step */
-                2px -2px 0 #000,   /* Bottom-left diagonal step */
-                -2px -2px 0 #000,  /* Bottom-right diagonal step */
-                0 2px 0 #000,      /* Top edge 2px */
-                0 -2px 0 #000,     /* Bottom edge 2px */
-                2px 0 0 #000,      /* Right edge 2px */
-                -2px 0 0 #000;     /* Left edge 2px */
+                /* Corner pixel extensions (creates the "stair-step" effect) */
+                3px 1px 0 0 #000,  /* Bottom-right diagonal step */
+                1px 3px 0 0 #000,  /* Bottom-right diagonal step */
+                -3px 1px 0 0 #000, /* Bottom-left diagonal step */
+                -1px 3px 0 0 #000, /* Bottom-left diagonal step */
+                3px -1px 0 0 #000, /* Top-right diagonal step */
+                1px -3px 0 0 #000, /* Top-right diagonal step */
+                -3px -1px 0 0 #000, /* Top-left diagonal step */
+                -1px -3px 0 0 #000; /* Top-left diagonal step */
         }
 
         /* Update the hover state */
@@ -221,6 +217,7 @@
             text-decoration: none;
             filter: none;
             text-shadow: none;
+        }
         }
         .main-links .icon {
             display: inline-block;
