--- a/index.html
+++ b/index.html
@@ -174,67 +174,39 @@
         }
 .main-links a {
             font-size: 1rem;
-            color: #444; /* Keep default text color as it was, visible on transparent */
+            color: #444; /* Default text color, visible on transparent background */
             text-decoration: none;
             opacity: 0.90;
-            transition: color 0.18s, opacity 0.18s, background 0.18s, border-color 0.18s, box-shadow 0.18s;
+            /* Simplified transitions for smooth changes without performance issues */
+            transition: color 0.18s, opacity 0.18s, background 0.18s; /* Removed border-color, box-shadow */
             font-weight: normal;
             display: flex;
             align-items: center;
             gap: 0.5em;
-            padding: 0.4em 1.6em;
-            border-radius: 0; /* Crucial: no native border-radius, all curves from box-shadow */
-            border: none; /* Remove any smooth border */
-            background: none; /* Keep background transparent by default to ensure frog visibility */
+            padding: 0.4em 1.6em; /* Adjust padding as needed for icon/text */
+            border-radius: 0; /* No native border-radius as SVG provides the shape */
+            border: none; /* No native border */
+            background: #fff; /* Button background color (white as per your image) */
             margin: 0 0.1em;
 
-            /* **Extensive Pixelated Black Outline - 2px thick, with clear stepped curves** */
-            box-shadow:
-                /* Straight 2px segments (core outline) */
-                2px 0 0 #000, -2px 0 0 #000,
-                0 2px 0 #000, 0 -2px 0 #000,
-
-                /* Inner 1px segments (to ensure full 2px thickness and continuity) */
-                1px 0 0 #000, -1px 0 0 #000,
-                0 1px 0 #000, 0 -1px 0 #000,
-
-                /* Inner corner pixels (for the initial curve step) */
-                1px 1px 0 #000, -1px 1px 0 #000,
-                1px -1px 0 #000, -1px -1px 0 #000,
-
-                /* Main 2px corner pixels (more pronounced steps) */
-                2px 2px 0 #000, -2px 2px 0 #000,
-                2px -2px 0 #000, -2px -2px 0 #000,
-
-                /* Further outer pixels for more distinct steps on the corners (3x1 and 1x3 patterns) */
-                3px 1px 0 #000, 1px 3px 0 #000,
-                -3px 1px 0 #000, -1px 3px 0 #000,
-                3px -1px 0 #000, 1px -3px 0 #000,
-                -3px -1px 0 #000, -1px -3px 0 #000,
-
-                /* Outermost pixels for a truly chunky, pixelated curve effect (4x1, 4x2, etc. patterns) */
-                4px 0 0 #000, -4px 0 0 #000,
-                0 4px 0 #000, 0 -4px 0 #000,
-
-                4px 1px 0 #000, 4px 2px 0 #000, 4px 3px 0 #000,
-                -4px 1px 0 #000, -4px 2px 0 #000, -4px 3px 0 #000,
-                1px 4px 0 #000, 2px 4px 0 #000, 3px 4px 0 #000,
-                1px -4px 0 #000, 2px -4px 0 #000, 3px -4px 0 #000,
-                -1px 4px 0 #000, -2px 4px 0 #000, -3px 4px 0 #000,
-                -1px -4px 0 #000, -2px -4px 0 #000, -3px -4px 0 #000;
+            /* Apply the SVG as a background image for the border */
+            background-image: url('./images/pixel-border.svg');
+            background-repeat: no-repeat;
+            background-size: 100% 100%; /* Stretches the SVG to fit button dimensions */
+            background-origin: border-box; /* Ensures background aligns with border area */
+            background-clip: padding-box; /* Ensures the white button background fills content area */
         }
 
-        /* Hover state: Button turns white with a dark border, pixelated shadow disappears */
         .main-links a:hover,
         .main-links a:focus {
-            background: #fff; /* Button turns white on hover */
+            background: #eee; /* Button turns slightly darker on hover */
             color: #181818; /* Text turns dark on hover */
-            border: 3px solid #111; /* Add a crisp dark border on hover */
-            box-shadow: none; /* Remove pixelated outline on hover */
             opacity: 1;
             text-decoration: none;
             filter: none;
             text-shadow: none;
+            /* You can change the border image on hover if you have a different SVG for it */
+            /* For now, just let the background change */
         }
         .main-links .icon {
             display: inline-block;
