--- a/index.html
+++ b/index.html
@@ -81,12 +81,12 @@
             font-weight: normal;
             word-break: break-word;
             text-align: right;
-            margin-bottom: 8px;
+            margin-bottom: 4px;
         }
         /* Subtitle uses DotGothic16 by default (desktop) - unchanged */
         .hero-nav-subtitle {
             font-family: 'DotGothic16', monospace !important;
-            font-size: 3rem;
+            font-size: 2.5rem;
             color: #fff;
             text-align: right; /* Current desktop alignment */
             margin-bottom: 18px;
@@ -172,41 +172,32 @@
             margin-bottom: 0;
             padding: 0;
         }
-.main-links a {
+        .main-links a {
             font-size: 1rem;
-            color: #444; /* Default text color, visible on transparent background */
+            color: #444;
             text-decoration: none;
             opacity: 0.90;
-            /* Simplified transitions for smooth changes without performance issues */
-            transition: color 0.18s, opacity 0.18s, background 0.18s; /* Removed border-color, box-shadow */
+            transition: color 0.18s, opacity 0.18s, background 0.18s, border-color 0.18s, text-shadow 0.18s;
             font-weight: normal;
             display: flex;
             align-items: center;
             gap: 0.5em;
-            padding: 0.4em 1.6em; /* Adjust padding as needed for icon/text */
-            border-radius: 0; /* No native border-radius as SVG provides the shape */
-            border: none; /* No native border */
-            background: #fff; /* Button background color (white as per your image) */
+            padding: 0.4em 1.6em;
+            border-radius: 20px;
+            border: 2.2px solid #fff;
+            background: none;
+            box-shadow: none;
             margin: 0 0.1em;
-
-            /* Apply the SVG as a background image for the border */
-            background-image: url('./images/pixel-border.svg');
-            background-repeat: no-repeat;
-            background-size: 100% 100%; /* Stretches the SVG to fit button dimensions */
-            background-origin: border-box; /* Ensures background aligns with border area */
-            background-clip: padding-box; /* Ensures the white button background fills content area */
         }
-
         .main-links a:hover,
         .main-links a:focus {
-            background: #eee; /* Button turns slightly darker on hover */
-            color: #181818; /* Text turns dark on hover */
+            background: #fff;
+            color: #181818;
+            border-color: #111;
             opacity: 1;
             text-decoration: none;
             filter: none;
             text-shadow: none;
-            /* You can change the border image on hover if you have a different SVG for it */
-            /* For now, just let the background change */
         }
         .main-links .icon {
             display: inline-block;
@@ -626,14 +617,14 @@
                 min-width: 1em;
             }
             .hero-nav-subtitle .frog-peep {
-                height: 1.2em;
-                min-height: 1.2em;
+                height: 1em;
+                min-height: 1em;
             }
             .hero-nav-subtitle .frog-wrap {
-                height: 0.8em;
+                height: 0.6em;
             }
             .hero-nav-subtitle .frog-wrap.fully-raised {
-                height: 1.2em;
+                height: 1em;
             }
         }
         /* MOBILE FONT OVERRIDE - MAXIMUM SPECIFICITY: this MUST be after all other CSS */
