--- a/index.html
+++ b/index.html
@@ -174,26 +174,36 @@
         }
         .main-links a {
             font-size: 1rem;
-            color: #444;
+            color: #181818; /* Text color for a white button */
             text-decoration: none;
             opacity: 0.90;
-            transition: color 0.18s, opacity 0.18s, background 0.18s, border-color 0.18s, text-shadow 0.18s;
+            /* Smoother transitions for visual effects */
+            transition: color 0.18s, opacity 0.18s, background-color 0.18s, background-image 0.18s, border-color 0.18s;
             font-weight: normal;
             display: flex;
             align-items: center;
             gap: 0.5em;
-            padding: 0.4em 1.6em;
-            border-radius: 20px;
-            border: 2.2px solid #fff;
-            background: none;
-            box-shadow: none;
+            padding: 0.4em 1.6em; /* Adjust padding to set the button's internal size */
+            border-radius: 0; /* Important: No native border-radius as the SVG creates the shape */
+            border: none; /* Important: No native border to avoid conflicts */
             margin: 0 0.1em;
+
+            /* ** Core properties to apply the SVG as the pixelated border ** */
+            background-color: #fff; /* This sets the white fill for the button's content area */
+            background-image: url('./images/pixel-border.svg'); /* This is the key: points to your SVG file */
+            background-repeat: no-repeat; /* Ensures the SVG is not tiled */
+            background-size: 100% 100%; /* Stretches the SVG to perfectly fit the button's dimensions */
+            background-origin: border-box; /* Starts drawing the background (and SVG) from the element's border edge */
+            background-clip: padding-box; /* Crucial: Clips the 'background-color' to the padding area,
+                                            making the border area transparent for the SVG to show through. */
         }
+
         .main-links a:hover,
         .main-links a:focus {
-            background: #fff;
-            color: #181818;
-            border-color: #111;
+            background-color: #eee; /* Button turns slightly darker white on hover */
+            background-image: none; /* The SVG border disappears on hover */
+            border: 3px solid #111; /* A crisp, solid dark border appears on hover */
+            color: #181818; /* Text color remains dark */
             opacity: 1;
             text-decoration: none;
             filter: none;
