--- a/index.html
+++ b/index.html
@@ -177,37 +177,40 @@
             color: #181818; /* Text color for a white button */
             text-decoration: none;
             opacity: 0.90;
-            /* Smoother transitions for visual effects */
-            transition: color 0.18s, opacity 0.18s, background-color 0.18s, background-image 0.18s, border-color 0.18s;
+            /* Only transition properties that don't cause layout shifts */
+            transition: color 0.18s, opacity 0.18s, background-color 0.18s;
             font-weight: normal;
-            display: flex;
+            display: flex; /* Ensures padding and content sizing is reliable */
             align-items: center;
             gap: 0.5em;
-            padding: 0.4em 1.6em; /* Adjust padding to set the button's internal size */
-            border-radius: 0; /* Important: No native border-radius as the SVG creates the shape */
-            border: none; /* Important: No native border to avoid conflicts */
+            padding: 0.4em 1.6em; /* This padding defines the button's internal size */
+            border-radius: 0; /* No native border-radius, the SVG creates the shape */
+            border: 2px solid transparent; /* **IMPORTANT:** This creates a transparent border to reserve 2px space, preventing layout shifts when hovering */
             margin: 0 0.1em;
 
-            /* ** Core properties to apply the SVG as the pixelated border ** */
             background-color: #fff; /* This sets the white fill for the button's content area */
-            background-image: url('./images/pixel-border.svg'); /* This is the key: points to your SVG file */
-            background-repeat: no-repeat; /* Ensures the SVG is not tiled */
+            background-image: url('./images/pixel-border.svg'); /* This loads your pixelated SVG border */
+            background-repeat: no-repeat;
             background-size: 100% 100%; /* Stretches the SVG to perfectly fit the button's dimensions */
             background-origin: border-box; /* Starts drawing the background (and SVG) from the element's border edge */
-            background-clip: padding-box; /* Crucial: Clips the 'background-color' to the padding area,
-                                            making the border area transparent for the SVG to show through. */
+            background-clip: padding-box; /* Clips the 'background-color' to the padding area, allowing SVG to show in border area */
         }
 
         .main-links a:hover,
         .main-links a:focus {
-            background-color: #eee; /* Button turns slightly darker white on hover */
-            background-image: none; /* The SVG border disappears on hover */
-            border: 3px solid #111; /* A crisp, solid dark border appears on hover */
+            background-color: #eee; /* **Only** the button's interior fill color changes on hover */
+
+            /* **IMPORTANT:** Do NOT change background-image or border properties here.
+                           The SVG will remain visible and pixelated, and no layout shifts will occur. */
+            background-image: url('./images/pixel-border.svg'); /* Explicitly keep the SVG on hover */
+            border-color: transparent; /* Keep border transparent */
+
             color: #181818; /* Text color remains dark */
             opacity: 1;
             text-decoration: none;
             filter: none;
             text-shadow: none;
+        }
         }
         .main-links .icon {
             display: inline-block;
