--- a/index.html
+++ b/index.html
@@ -505,145 +505,166 @@
         }
 
         /* MOBILE OPTIMIZATION (only for mobile) */
-        @media (max-width: 700px) {
-            html, body {
-                font-size: 15px;
-            }
-            .hero-header {
-                flex-direction: column;
-                align-items: center;
-                justify-content: flex-start;
-                padding: 0 2vw;
-                margin-top: 14px;
-                width: 100vw;
-                max-width: 100vw;
-            }
-            .hero-logo { height: 56px; }
-            .logo-circle { 
-                padding: 8px; 
-                margin-bottom: 18px;
-            }
-            .hero-nav-col {
-                align-items: center;
-                width: 100%;
-                margin: 0;
-                padding: 0;
-            }
-            .hero-nav-title {
-                text-align: center;
-                width: 100%;
-                font-size: 1.2rem; /* Slightly reduced font size for mobile */
-                -webkit-text-stroke: 1px #000; /* Adjusted outline for mobile */
-                text-stroke: 1.3px #000;         /* Adjusted outline for mobile */
-                margin-bottom: 8px;
-                margin-top: 0;
-                word-break: break-word;
-            }
-            /* Subtitle text aligned to center on mobile */
-          .hero-nav-subtitle {
-                text-align: center;
-                font-size: 1.5rem; /* Reduced font size for mobile */
-                text-shadow:
-                    -1.5px -1.5px 0 #000,
-                    1.5px -1.5px 0 #000,
-                    -1.5px 1.5px 0 #000,
-                    1.5px 1.5px 0 #000,
-                    0px -1.5px 0 #000,
-                    0px 1.5px 0 #000,
-                    -1.5px 0px 0 #000,
-                    1.5px 0px 0 #000; /* Reduced text-shadow to 1px for sharpness on mobile */
-            }
-            
-            .main-links {
-                flex-direction: column;
-                align-items: center;
-                gap: 8px;
-                width: 100%;
-                margin: 8px 0 0 0;
-                padding: 0;
-            }
-            .main-links a {
-                font-size: 0.95rem;
-                width: 90%;
-                justify-content: center;
-                padding: 0.5em 0;
-                border-radius: 10px;
-            }
-            .nav-hero-separator, .banner-hero-separator {
-                width: 98vw;
-                min-width: 0;
-                max-width: 100vw;
-                height: 36px;
-            }
-            .nav-hero-separator svg, .banner-hero-separator svg {
-                height: 36px;
-                min-height: 36px;
-            }
+@media (max-width: 700px) {
+    html, body {
+        font-size: 15px;
+    }
+    .hero-header {
+        flex-direction: row;
+        /* CHANGE HERE: Align items to their start (top) */
+        align-items: flex-start; /* Aligns the very top of flex items */
+        justify-content: space-between;
+        padding: 0 4vw 0 2vw;
+        margin-top: 14px;
+        width: 100vw;
+        max-width: 100vw;
+        box-sizing: border-box;
+    }
+    .hero-logo-col {
+        flex: 0 0 auto;
+        margin-right: 10px;
+        /* NEW: Add a small top margin to the logo to adjust its position */
+        /* This margin will push the logo down slightly if needed to align precisely */
+        /* You might need to experiment with this value (e.g., 0px, 2px, -2px) */
+        /* depending on the exact font rendering and image size. */
+        margin-top: 0px; /* Start with 0, adjust if logo is too high/low */
+    }
+    .hero-logo { height: 56px; }
+    .logo-circle {
+        padding: 8px;
+        margin-bottom: 0;
+    }
+    .hero-nav-col {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end; /* Keeps title/subtitle aligned right */
+        flex-grow: 1;
+        width: auto;
+        margin: 0;
+        padding: 0;
+        /* NEW: Add a small top margin to the nav column if the text is too low relative to the logo */
+        /* If the logo appears too high, you can add positive margin-top here. */
+        /* If the text appears too high, you can add negative margin-top here. */
+        margin-top: 0px; /* Start with 0, adjust if text is too high/low */
+    }
+    .hero-nav-title {
+        text-align: right;
+        width: 100%;
+        font-size: 1.2rem;
+        -webkit-text-stroke: 1px #000;
+        text-stroke: 1.3px #000;
+        /* REMOVED: margin-top: 0; (because we're now aligning the parent flex item) */
+        margin-bottom: 8px;
+        word-break: break-word;
+        line-height: 1;
+    }
+    .hero-nav-subtitle {
+        text-align: right;
+        font-size: 1.5rem;
+        text-shadow:
+            -1.5px -1.5px 0 #000,
+            1.5px -1.5px 0 #000,
+            -1.5px 1.5px 0 #000,
+            1.5px 1.5px 0 #000,
+            0px -1.5px 0 #000,
+            0px 1.5px 0 #000,
+            -1.5px 0px 0 #000,
+            1.5px 0px 0 #000;
+        margin-bottom: 18px;
+        margin-top: 0; /* Keep this to ensure it stacks right below the title */
+        line-height: 1;
+    }
 
-            /* Show mobile banner container and hide desktop banner container on mobile */
-            .desktop-banner-container {
-                display: none;
-            }
-            .mobile-banner-container {
-                display: block;
-                width: 100%; /* Ensure it takes full width */
-            }
+    .main-links {
+        flex-direction: column;
+        align-items: center; /* Keeps buttons centered */
+        gap: 8px;
+        width: 100%;
+        margin: 8px 0 0 0;
+        padding: 0;
+    }
+    .main-links a {
+        font-size: 0.95rem;
+        width: 90%;
+        justify-content: center;
+        padding: 0.5em 0;
+        border-radius: 10px;
+    }
+    .nav-hero-separator, .banner-hero-separator {
+        width: 98vw;
+        min-width: 0;
+        max-width: 100vw;
+        height: 36px;
+    }
+    .nav-hero-separator svg, .banner-hero-separator svg {
+        height: 36px;
+        min-height: 36px;
+    }
 
-            .banner-images-spacing {
-                height: 18px;
-            }
-            .hero-image-row {
-                flex-direction: column !important; /* This rule will now only apply if desktop-banner-container is somehow visible on mobile */
-                width: 100vw;
-                align-items: center;
-            }
-            .hero-image-box {
-                width: 96vw;
-                max-width: 100vw;
-                margin: 0 auto 8px auto;
-                aspect-ratio: 1/1;
-            }
-            .gallery-grid {
-                grid-template-columns: 1fr;
-                gap: 18px;
-                padding: 10px 2vw 30px 2vw;
-            }
-            .gallery-item img {
-                border-radius: 8px;
-            }
-            .footer-social-links {
-                flex-direction: column;
-                gap: 8px;
-            }
-            .footer-social-link {
-                font-size: 0.8rem;
-            }
-            body, html {
-                overflow-x: hidden;
-                max-width: 100vw;
-            }
-            /* Frog animation sizing tweaks for mobile */
-            .hero-nav-subtitle .frog-peep,
-            .hero-nav-subtitle .frog-wrap {
-                width: 1.2em;
-                min-width: 1em;
-            }
-            .hero-nav-subtitle .frog-peep {
-                height: 1.2em;
-                min-height: 1.2em;
-            }
-            .hero-nav-subtitle .frog-wrap {
-                height: 0.8em;
-            }
-            .hero-nav-subtitle .frog-wrap.fully-raised {
-                height: 1.2em;
-            }
-        }
-        /* MOBILE FONT OVERRIDE - MAXIMUM SPECIFICITY: this MUST be after all other CSS */
-        @media (max-width: 700px) {
-            body .hero-nav-subtitle {
-                font-family: 'DotGothic16', monospace !important;
-            }
+    .desktop-banner-container {
+        display: none;
+    }
+    .mobile-banner-container {
+        display: block;
+        width: 100%;
+    }
+
+    .banner-images-spacing {
+        height: 18px;
+    }
+    .hero-image-row {
+        flex-direction: column !important;
+        width: 100vw;
+        align-items: center;
+    }
+    .hero-image-box {
+        width: 96vw;
+        max-width: 100vw;
+        margin: 0 auto 8px auto;
+        aspect-ratio: 1/1;
+    }
+    .gallery-grid {
+        grid-template-columns: 1fr;
+        gap: 18px;
+        padding: 10px 2vw 30px 2vw;
+    }
+    .gallery-item img {
+        border-radius: 8px;
+    }
+    .footer-social-links {
+        flex-direction: column;
+        gap: 8px;
+    }
+    .footer-social-link {
+        font-size: 0.8rem;
+    }
+    body, html {
+        overflow-x: hidden;
+        max-width: 100vw;
+    }
+    /* Frog animation sizing tweaks for mobile */
+    .hero-nav-subtitle .frog-peep,
+    .hero-nav-subtitle .frog-wrap {
+        width: 1.2em;
+        min-width: 1em;
+    }
+    .hero-nav-subtitle .frog-peep {
+        height: 1.2em;
+        min-height: 1.2em;
+    }
+    .hero-nav-subtitle .frog-wrap {
+        height: 0.8em;
+    }
+    .hero-nav-subtitle .frog-wrap.fully-raised {
+        height: 1.2em;
+    }
+}
+/* MOBILE FONT OVERRIDE - MAXIMUM SPECIFICITY: this MUST be after all other CSS */
+@media (max-width: 700px) {
+    body .hero-nav-subtitle {
+        font-family: 'DotGothic16', monospace !important;
+    }
+}
         }
     </style>
 </head>
